# Json-Formatter

./: README.md  annotations.py  converters.py  jfmt.bat  pyproject.toml  script.py
jfmt/: __init__.py  __main__.py  annotations.py  converters.py
