[project]
name = "jfmt"
dynamic = ["version"]
description = "Indent structure and format keys in your deeply nested .json"
authors = [
    { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
    "actus~=0.7.0",
    "colex~=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"main" = "jfmt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "jfmt/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["jfmt/**", "jfmt.bat"]
exclude = ["jfmt/**/__pycache__"]
